<resources>
    <string name="app_name">Emperor Tracker</string>
    <string name="text_forgot_your_password"><u>Forgot your password?</u></string>
    <string name="text_button_login">Iniciar Sesión</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="hint_email">Correo Electronico</string>
    <string name="hint_hash_code">Ingrese el Hash Code</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>
    <string name="servicios">Servicios</string>
    <string name="configuracion">Configuración</string>

    <string name="tab_profile">Perfil</string>
    <string name="tab_health">Salud</string>
    <string name="tab_alarms">Alarmas</string>
    <string name="tab_map">Mapa</string>
    <string name="tab_gastos">Gastos</string>
    <string name="title_gr_operaciones">GR - OPERACIONES</string>
    <string name="title_navigation_drawer_activity"> </string>
    <string name="title_sign_up_activity">Create an Account</string>
    <string name="empty_space"> </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="kms_de_inicio">Kms de Inicio</string>
    <string name="guardar">Guardar</string>
    <string name="valor_gastado">Valor</string>
    <string name="sing_up">Sing up</string>
    <string name="update">Update</string>
    <string name="age">Edad:</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Agregar</string>
    <string name="close">Cerrar</string>
    <string name="acept">Aceptar</string>
    <string name="title_activity_person_tracked_container">PersonTrackedContainerActivity</string>
    <string name="on">Activado</string>
    <string name="off">Desactivado</string>
    <string name="update_information">Actualizar Información</string>
    <string name="create_alarm">Crear Alarma</string>

    <string name="text_weight">Peso</string>
    <string name="text_footsteps">Pasos</string>
    <string name="disclaimer_bpm">60 bpm recomendado</string>
    <string name="disclaimer_sleep">Anoche</string>
    <string name="check_records">Ver historial</string>

    <string name="check_fisical_activities">Ver Actividades Físicas</string>
    <string name="days">Días</string>
    <string name="monday">L</string>
    <string name="tuesday">M</string>
    <string name="wednesday">MR</string>
    <string name="thursday">J</string>
    <string name="friday">V</string>
    <string name="saturday">S</string>
    <string name="sunday">D</string>
    <string name="login_incorrect">Usuario o contraseña incorrecta, intente nuevamente por favor</string>
    <string name="login_not_successful">Inicio de sesión incorrecto</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="disclaimer_no_alarms">En este momento no tienes alarmas</string>
    <string name="click_here_to_create_one_alarm">Click aqui para crear una</string>
    <string name="disclaimer_no_people_tracked">No tienes a nadie para supervisar</string>
    <string name="click_here_to_add_someone">Click aqui para agregar a alguien</string>
    <string name="congratulations">Felicitaciones!</string>
    <string name="we_are_so_sorry">Lo sentimos!</string>
    <string name="person_successfully_added">Has agregado a una persona exitosamente</string>
    <string name="message_hashcode_incorrect">El HashCode no corresponde a nadie registrado ens Emperor TraCare</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
