<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary">

        <TextView
            android:text="@string/we_are_so_sorry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_title_added_popup"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="@dimen/button_textSize"/>

        <TextView
            android:text="@string/message_hashcode_incorrect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textview_title_popup"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="10dp"
            android:textSize="@dimen/button_textSize"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp">

        <Button
            android:id="@+id/button_close_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/close"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_popup"
            android:textStyle="bold"
            android:paddingTop="@dimen/button_padding_top_bottom"
            android:paddingBottom="@dimen/button_padding_top_bottom"
            android:paddingLeft="@dimen/button_padding_right_left"
            android:paddingRight="@dimen/button_padding_right_left"
            android:background = "@drawable/roundedbutton"/>

    </LinearLayout>


</LinearLayout>