<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/fragment_profile">

    <LinearLayout
        android:id="@+id/linearLayout_person_tracked_profile_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_fragment_devices">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_phone_person_tracked_profile_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSecondaryText"
                    android:text="Activate Panic State"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/textview_text_size_personal_information_profile"
                    android:textStyle="bold" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textOn="@string/on"
                    android:layout_marginLeft="10dp"
                    android:textOff="@string/off"
                    android:showText="false"
                    android:textSize="@dimen/textview_text_size_personal_information_profile"/>

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/update_information"
            android:textColor="@android:color/white"
            android:textSize="@dimen/button_textSize"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/button_margin_top"
            android:paddingTop="@dimen/button_padding_top_bottom"
            android:paddingBottom="@dimen/button_padding_top_bottom"
            android:paddingLeft="@dimen/button_padding_right_left"
            android:paddingRight="@dimen/button_padding_right_left"
            android:background = "@drawable/roundedbutton"/>


    </LinearLayout>



</merge>