<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.emperor_tracare.emperortracker.SignUpActivity"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/app_bar_sign_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/activity_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30sp"
                android:layout_weight="0.7">

                <ImageView
                    android:id="@+id/logo_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/ic_logo_gray" />
            </RelativeLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:layout_weight="0.3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_horizontal_login">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextPrimary">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/sign_up_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_name" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/EditTextPrimary">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/sign_up_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_username" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        android:theme="@style/EditTextPrimary">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/sign_up_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password"
                            android:text="@android:color/white"
                            android:inputType="textPassword"
                            />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        android:theme="@style/EditTextPrimary">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/sign_up_confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_confirm_password"
                            android:text="@android:color/white"
                            android:inputType="textPassword"
                            />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        android:theme="@style/EditTextPrimary">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/sign_up_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email"
                            />

                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/sign_up_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/sing_up"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/button_textSize"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/button_margin_top"
                        android:paddingTop="@dimen/button_padding_top_bottom"
                        android:paddingBottom="@dimen/button_padding_top_bottom"
                        android:paddingLeft="@dimen/button_padding_right_left"
                        android:paddingRight="@dimen/button_padding_right_left"
                        android:background = "@drawable/roundedbutton"/>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
