<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/coordinator_main_activity"
    tools:context="com.emperor_tracare.emperortracker.MainActivity"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:id="@+id/activity_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_login_logo_padding_bottom"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_login_logo_padding_top"
            android:layout_weight="0.6">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/logo_login_width"
                android:layout_height="@dimen/logo_login_height"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_logo_white" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_horizontal_login"
                android:paddingBottom="@dimen/padding_horizontal_login"
                android:paddingRight="@dimen/padding_horizontal_login"
                android:paddingTop="@dimen/activity_login_layout_padding_top">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:theme="@style/EditTextWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"/>

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/textview_margin_top"
                    android:layout_gravity="right"
                    android:text="@string/text_forgot_your_password"
                    android:textSize="@dimen/textview_login_activity"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    />

                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/text_button_login"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/button_textSize"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/button_margin_top"
                    android:paddingTop="@dimen/button_padding_top_bottom"
                    android:paddingBottom="@dimen/button_padding_top_bottom"
                    android:paddingLeft="@dimen/button_padding_right_left"
                    android:paddingRight="@dimen/button_padding_right_left"
                    android:background = "@drawable/roundedbutton"/>

            </LinearLayout>



        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center|bottom"
            android:gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:padding="@dimen/linear_layout_padding_dont_you_have_an_account">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't you have an account yet?"
                android:textColor="@android:color/white"
                android:textSize="@dimen/activity_login_textsize_dontyouhave"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sing_up"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginLeft="@dimen/margin_top_fragments_service_detail"
                android:textSize="@dimen/activity_login_textsize_dontyouhave"/>

        </LinearLayout>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>